@startuml
class App {
+main()
+starter()
}

class Controller {
-ObservableList<Item> overList
+addItem()
+removeItem()
+clearList()
+displayAll()
+displayIncomplete()
+displayComplete()
+exportList()
+importList()
+initialize()
}

class Item {
-String date
-String title
-boolean completed
+getTitle(): String
+getDate(): String
+setTitle()
+setDate()
+setCompleted()
}

App --> Controller
Item <--> Controller
@enduml